@@ -1,10 +1,8 @@
 import org.json.JSONObject;
-import java.io.FileInputStream;
-import java.io.FileNotFoundException;
-import java.io.FileOutputStream;
-import java.io.IOException;
+
+import java.io.*;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 
 public class FileData {
 
@@ -12,29 +10,34 @@ public class FileData {
         private JSONObject json;
         private String fileName;
         private final String listName = "userData";
+        private byte[] b;
 
         public String getListName() {
             return listName;
         }
 
     public int loadJSON(String fileName) {
-            this.fileName = fileName;
+        this.fileName = fileName;
+        try {
+            json = new JSONObject(new BufferedReader( new FileReader (fileName)).readLine());
+        } catch (FileNotFoundException e) {
             try {
-                json = new JSONObject(new String(new FileInputStream(fileName).readAllBytes()));
-            } catch (FileNotFoundException e) {
-                try {
-                    Files.writeString((Files.createFile(Path.of(fileName))),"{\"" + listName + "\":[]}");
-                    json = new JSONObject(new String(new FileInputStream(fileName).readAllBytes()));
-                } catch (IOException ioException) {
-                    ioException.printStackTrace();
-                }
-                return -1;
-            } catch (IOException e) {
-                e.printStackTrace();
-                return -2;
+                Files.createFile(Paths.get(fileName));
+                FileWriter file = new FileWriter(fileName);
+                file.write(new JSONObject("{\"" + listName + "\":[]}").toString());
+                file.flush();
+                file.close();
+                json = new JSONObject(new BufferedReader( new FileReader (fileName)).readLine());
+            } catch (IOException ioException) {
+                ioException.printStackTrace();
             }
-            return 0;
+            return -1;
+        } catch (IOException e) {
+            e.printStackTrace();
+            return -2;
         }
+        return 0;
+    }
 
         public int saveJSON(JSONObject json,String fileName) {
             try {
